--- a/client/src/my/sheeponthetable/gui/SheepPanelfail.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanelfail.form
@@ -163,7 +163,7 @@
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="sheep" type="code"/>
+              <Connection code="sheepShow" type="code"/>
             </Property>
           </Properties>
         </Component>
