--- a/client/src/my/sheeponthetable/gui/SheepPanelfail.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanelfail.form
@@ -159,6 +159,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Deselect"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deSelectActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
